fixed #1, added arrow_up.png, and removed too much shadow from header

--- a/css/demo.sass
+++ b/css/demo.sass
@@ -28,7 +28,8 @@ body
   background-position: 20px 0
   text-shadow: 0px 1px #FFF
   z-index: 0
-  -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0.20), rgba(0,0,0,0.12) 0px 0px 10px inset
+  -webkit-box-shadow: inset 0px -8px 4px -3px rgba(0, 0, 0, 0.12)
+  box-shadow: inset 0px -8px 4px -3px rgba(0, 0, 0, 0.12)
   
   &.visible
     background-image: url(../images/arrow_up.png)
